fixed problem of menu not visible

--- a/src/assets/css/cmps/middle-filter.scss
+++ b/src/assets/css/cmps/middle-filter.scss
@@ -5,7 +5,7 @@
   &.sticky {
     position: sticky;
     top: 56px;
-    z-index: 10;
+    // z-index: 10;
   }
 }
 
