--- a/src/assets/css/cmps/profile-button.scss
+++ b/src/assets/css/cmps/profile-button.scss
@@ -3,35 +3,35 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
 
-.profile-toggle {
-  all: unset;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  padding: 8px 12px;
-  border: 1px solid #ddd;
-  border-radius: 24px;
-  background-color: white;
-  cursor: pointer;
-}
+  .profile-toggle {
+    all: unset;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    padding: 8px 12px;
+    border: 1px solid #ddd;
+    border-radius: 24px;
+    background-color: white;
+    cursor: pointer;
+  }
 
-.three-parallel {
-  width: 16px;
-  height: 16px;
-}
+  .three-parallel {
+    width: 16px;
+    height: 16px;
+  }
 
-.avatar {
-  width: 28px;
-  height: 28px;
-  // border-radius: 50%;
-  // object-fit: cover;
+  .avatar {
+    width: 28px;
+    height: 28px;
+  }
 }
 
 .user-menu-wrapper {
-  position: absolute;
-  top: 130%;
-  right: 55px;
   z-index: 9999;
+  width: 250px;
+  border-radius: 12px;
+  padding: 12px;
 }
+
+
