--- a/src/assets/css/cmps/upper-header.scss
+++ b/src/assets/css/cmps/upper-header.scss
@@ -103,3 +103,38 @@
 // //     }
 // //   }
 // // }
+
+.upper-header {
+    position: sticky;
+    top:0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 7vh;
+    width: 100%;
+    margin-top: 0;
+    z-index: 10;
+    background-color: white;
+   
+    .logo {
+      a {
+        text-decoration: none; 
+        display: flex;
+        align-items: center;
+        gap: 6px; 
+      }
+    
+      img {
+        width: 30px;
+        height: auto;
+        object-fit: contain;
+      }
+    
+      span {
+        font-size: 20px;
+        font-weight: 600;
+        color: #FF385C;
+        text-decoration: none; 
+      }
+    }
+}
